# Simulador_G

./: .gitignore  CMakeLists.txt  Main.cpp  vcpkg.json
